Add section gallery

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -2,7 +2,13 @@
 
 $heading-color: #232323;
 $text-color: rgba(35, 35, 35, 0.7);
-$button-color: #659DBD;
+$color-contrast-1: #659DBD;
+$color-contrast-1-dark: #5B8DAA;
+$color-contrast-2: #E7717D;
+$color-inactive: #EAEAEA;
+
+$padding-side: 12.8rem;
+
 
 *,
 *::after,
