--- a/src/sass/blocks/button/_button.scss
+++ b/src/sass/blocks/button/_button.scss
@@ -1,8 +1,16 @@
 .button {
-    background-color: $button-color;
-    padding: 2.1rem 14.2rem;
+    background-color: $color-contrast-1;
+    padding-top: 2.1rem;
+    padding-bottom: 2.1rem;
+    width: 33.5rem;
     color: #fff;
     border: none;
     font-size: 1.6rem;
     cursor: pointer;
+    transition: all .3s;
+
+    &:hover {
+        width: 35.6rem;
+        background-color: $color-contrast-1-dark;
+    }
 }
