--- a/src/sass/blocks/description/_description.scss
+++ b/src/sass/blocks/description/_description.scss
@@ -2,5 +2,5 @@
     display: flex;
     align-items: baseline;
     justify-content: space-between;
-    padding: 6.4rem 12.8rem;
+    padding: 6.4rem $padding-side;
 }
