Create tours section

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,3 +12,10 @@
 @import "./blocks/gallery/__images/gallery__images";
 @import "./blocks/gallery/__photo/gallery__photo";
 @import "./blocks/gallery/__arrows/gallery__arrows";
+@import "./blocks/tours/tours";
+@import "./blocks/tours/__container/tours__container";
+@import "./blocks/tour/tour";
+@import "./blocks/tour/__image/tour__image";
+@import "./blocks/tour/__title/tour__title";
+@import "./blocks/tour/__description/tour__description";
+
