--- a/src/sass/blocks/arrows/__arrow/_arrows__arrow.scss
+++ b/src/sass/blocks/arrows/__arrow/_arrows__arrow.scss
@@ -7,6 +7,7 @@
     justify-content: center;
     align-items: center;
     stroke: $color-contrast-2;
+    cursor: pointer;
 
     &:not(:last-child) {
         margin-right: 3.2rem;
