Add gallery scroll

--- a/src/sass/blocks/gallery/__images/_gallery__images.scss
+++ b/src/sass/blocks/gallery/__images/_gallery__images.scss
@@ -1,7 +1,6 @@
 .gallery__images {
     display: flex;
-    // width: 100%;
-    gap: 3.2rem;
+    // gap: 3.2rem;
     padding: 0 $padding-side;
     overflow: hidden;
 }
