--- a/src/sass/blocks/gallery/__photo/_gallery__photo.scss
+++ b/src/sass/blocks/gallery/__photo/_gallery__photo.scss
@@ -2,4 +2,9 @@
     width: 31.3rem;
     height: 33.6rem;
     display: block;
+    padding: 0;
+    padding-right: 3.2rem;
+    object-fit: cover;
+    transition: all .5s;
+
 }
