--- a/src/sass/blocks/form/__button-types/_form__button-types.scss
+++ b/src/sass/blocks/form/__button-types/_form__button-types.scss
@@ -1,4 +1,9 @@
 .form__button-types {
     display: flex;
     justify-content: space-between;
+
+    @include respond(mob-land) {
+        flex-wrap: wrap;
+        gap: 2rem;
+    }
 }
