--- a/src/sass/blocks/button/_button.scss
+++ b/src/sass/blocks/button/_button.scss
@@ -12,4 +12,16 @@
     &:hover {
         outline-color: $color-contrast-1;
     }
+
+    @include respond(desk-small) {
+        &:not(.button_type_submit) {
+            padding: 2.1rem 4.5rem;
+        }
+    }
+
+    @include respond(tab-land) {
+        &:not(.button_type_submit) {
+            padding: 2.1rem 2.2rem;
+        }
+    }
 }
