--- a/src/sass/blocks/form/__input/_type/_form__input_type_check.scss
+++ b/src/sass/blocks/form/__input/_type/_form__input_type_check.scss
@@ -10,6 +10,7 @@
     padding: 0;
     margin-right: 1.6rem;
     cursor: pointer;
+    border: none;
 
     &::after {
         content: "";
@@ -23,6 +24,11 @@
         height: 3.2rem;
         border: 1px solid $color-inactive;
         margin: 0;
+
+        @include respond(mob-port) {
+            width: 100%;
+            height: 100%;
+        }
         
     }
 
