--- a/src/sass/blocks/tour/__description/_tour__description.scss
+++ b/src/sass/blocks/tour/__description/_tour__description.scss
@@ -4,4 +4,11 @@
     color: $text-color;
     max-width: 31.3rem;
     margin-top: 1.6rem;
+
+    @include respond(mob-land) {
+        grid-row: 2/3;
+        grid-column: 2/3;
+        margin-top: 0;
+        max-width: 25rem;
+    }
 }
