--- a/src/sass/blocks/tour/__image/_tour__image.scss
+++ b/src/sass/blocks/tour/__image/_tour__image.scss
@@ -3,4 +3,18 @@
     height: 33.6rem;
     object-fit: cover;
     object-position: center;
+    display: inline-block;
+
+    @include respond(desk-small) {
+        width: 100%;
+    }
+
+    @include respond(tab-land) {
+        height: 25rem;
+    }
+
+    @include respond(mob-land) {
+        grid-row: 1/3;
+        grid-column: 1/2;
+    }
 }
