--- a/src/sass/blocks/tours/_tours.scss
+++ b/src/sass/blocks/tours/_tours.scss
@@ -1,3 +1,11 @@
 .tours {
     padding: 6.4rem $padding-side;
+
+    @include respond(tab-land) {
+        padding: 6.4rem 8rem
+    }
+
+    @include respond(mob-land) {
+        padding: 6.4rem 5rem
+    }
 }
