--- a/src/sass/blocks/form/__dropdown/_inactive/_form__dropdown_inactive.scss
+++ b/src/sass/blocks/form/__dropdown/_inactive/_form__dropdown_inactive.scss
@@ -1,3 +1,8 @@
 .form__dropdown_inactive {
     max-height: 0;
+
+    .form__dropdown_inactive .form__label_type_radio {
+        display: none;
+        color: red;
+    }
 }
